tests/error/comptime/pointer_arithmetic05.bz
// error: invalid pointer arithmetic operation with type '*i32' and offset 2
// note: while evaluating expression at compile time
// note: address points to this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;
		&i + 2;
	});
}
